--- a/sass/base/_modal.scss
+++ b/sass/base/_modal.scss
@@ -11,7 +11,7 @@
   $large-screen: em(860) !default;
   $base-font-color: $dark-gray !default;
   $modal-padding: 3em;
-  $modal-background: $base-background-color;
+  $modal-background: transparent;
   $modal-close-color: $light-gray;
   $modal-image-height: 135px;
   $modal-image-width: $modal-image-height;
@@ -45,7 +45,7 @@
     padding-top: 0.6em;
     text-align: left;
     visibility: hidden;
-    z-index: 99999999999;
+    z-index: 99999;
 
     @include media($large-screen) {
       padding-top: 10em;
